bin_PROGRAMS = trillian

trillian_SOURCES = array.c board.c display.c input.c main.c moves.c pieces.c player.c trillian.c vector.c zaphod.c array.h board.h chessescape.h config.h defs.h display.h input.h moves.h pieces.h player.h trillian.h	vector.h zaphod.h

AM_CFLAGS = -lm -O2 -DDATADIR=\"$(datadir)\" -DLOCALSTATEDIR=\"$(localstatedir)\" -I$(top_srcdir)/include
